v0.2.2 (05/01/2023) :
    - Corrected bug with scattered data layout
    
v0.2.1 (05/01/2023) :
    - Added generation of debug files (.lst, .sym) 

v0.2.0 (04/24/2023) :
    - Added a78 header and runs DAMS automatically now
    - Added _ms_paldetected & multisprite_get_tv to produce code independant of PAL and NTSC
    - moved all the code to 224 lines for PAL and NTSC

v0.1.2 (04/17/2023) :
    - Added multisprite example (examples/example_multisprite.c)
    - Added multisprite support through multisprite.h header

v0.1.1 :
    - Enhanced Holey DMA management
    - Added bankswitching and RAM on cart support
    - Corrected memory mapping

v0.1.0 (4/4/2023) :
    - First release