@@ -1,4 +1,5 @@
 v0.2.2 (05/01/2023) :
+    - Modified generated header so that we can compile without prosystem.h
     - Corrected bug with scattered data layout
     
 v0.2.1 (05/01/2023) :
